[gd_scene load_steps=16 format=2]

[ext_resource path="res://themes/FlatUI/kenneyUI-blue.tres" type="Theme" id=1]
[ext_resource path="res://lobby/scenes/waiting_room/waiting_list.gd" type="Script" id=2]
[ext_resource path="res://lobby/scenes/waiting_room/server_settings.gd" type="Script" id=3]
[ext_resource path="res://lobby/scenes/waiting_room/waiting_room.gd" type="Script" id=4]
[ext_resource path="res://lobby/scenes/waiting_room/ips.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.207843, 0.207843, 0.215686, 0.352941 )
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="DynamicFontData" id=11]
antialiased = false
font_path = "res://themes/FlatUI/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=19]
size = 22
font_data = SubResource( 11 )

[sub_resource type="Theme" id=12]
default_font = SubResource( 19 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[node name="waiting_room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="waiting_list_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 15.0
margin_right = 125.0
margin_bottom = 10.0
grow_horizontal = 2
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 125, 0 )
mouse_filter = 1
custom_styles/panel = SubResource( 10 )

[node name="waiting_list" type="GridContainer" parent="waiting_list_panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 240.0
margin_bottom = 10.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 12 )
custom_constants/vseparation = 4
custom_constants/hseparation = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -188.0
margin_right = -15.0
margin_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 250, 0 )

[node name="start" type="Button" parent="buttons"]
margin_right = 250.0
margin_bottom = 42.251
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Spiel starten"

[node name="return" type="Button" parent="buttons"]
margin_top = 46.0
margin_right = 250.0
margin_bottom = 88.251
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Verlassen"

[node name="car_selector" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 220, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Auto Ã¤ndern"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copy_xt_ip" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -167.0
margin_right = 237.0
margin_bottom = -124.749
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 220, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Externe IP kopieren"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copy_it_ip" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -495.0
margin_top = -120.0
margin_right = -275.0
margin_bottom = -77.749
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 220, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Interne IP kopieren"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_settings_panel" type="PanelContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 315.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
custom_styles/panel = SubResource( 10 )

[node name="server_settings" type="GridContainer" parent="server_settings_panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 178.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_constants/vseparation = 4
custom_constants/hseparation = 6
columns = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="server_settings_panel/server_settings"]
margin_top = 10.0
margin_right = 126.0
margin_bottom = 28.0
text = "Name:"
align = 2

[node name="NameEdit" type="LineEdit" parent="server_settings_panel/server_settings"]
margin_left = 132.0
margin_right = 280.0
margin_bottom = 39.4343
max_length = 20
placeholder_text = "Name des Spiels"

[node name="MapSelectionLabel" type="Label" parent="server_settings_panel/server_settings"]
margin_top = 55.0
margin_right = 126.0
margin_bottom = 73.0
theme = ExtResource( 1 )
text = "Map:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapSelection" type="OptionButton" parent="server_settings_panel/server_settings"]
margin_left = 132.0
margin_top = 43.0
margin_right = 280.0
margin_bottom = 85.251
focus_neighbour_right = NodePath("../../../HBox/Server/Nickname")
focus_neighbour_bottom = NodePath("../RoundCount")
focus_next = NodePath("../RoundCount")
focus_previous = NodePath("../../../HBox/main/leaveBtn")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundCountLabel" type="Label" parent="server_settings_panel/server_settings"]
margin_top = 99.0
margin_right = 126.0
margin_bottom = 117.0
theme = ExtResource( 1 )
text = "Laps:"
align = 2

[node name="RoundCount" type="SpinBox" parent="server_settings_panel/server_settings"]
margin_left = 132.0
margin_top = 89.0
margin_right = 280.0
margin_bottom = 128.434
focus_neighbour_top = NodePath("../MapSelection")
focus_neighbour_right = NodePath("../../../HBox/Server/Hostname")
focus_previous = NodePath("../MapSelection")
focus_mode = 2
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
min_value = 1.0
max_value = 20.0
value = 1.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startTimer" type="Label" parent="server_settings_panel/server_settings"]
margin_top = 141.0
margin_right = 126.0
margin_bottom = 159.0
text = "Countdown:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="startTimerButton" type="CheckBox" parent="server_settings_panel/server_settings"]
margin_left = 132.0
margin_top = 132.0
margin_right = 280.0
margin_bottom = 168.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 15 )
custom_styles/disabled = SubResource( 16 )
custom_styles/hover_pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
align = 2

[node name="ip_panel" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -76.0
margin_right = 315.0
margin_bottom = -15.0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
mouse_filter = 1
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ips" type="GridContainer" parent="ip_panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 51.0
theme = ExtResource( 1 )
custom_constants/hseparation = 10
columns = 2
script = ExtResource( 5 )

[node name="ext_ip_label" type="Label" parent="ip_panel/ips"]
margin_right = 118.0
margin_bottom = 18.0
text = "Externe Ip:"
align = 2

[node name="ext_ip" type="Label" parent="ip_panel/ips"]
margin_left = 128.0
margin_right = 160.0
margin_bottom = 18.0
text = "[IP]"

[node name="int_ip_label" type="Label" parent="ip_panel/ips"]
margin_top = 22.0
margin_right = 118.0
margin_bottom = 40.0
text = "Interne Ip:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="int_ip" type="Label" parent="ip_panel/ips"]
margin_left = 128.0
margin_top = 22.0
margin_right = 160.0
margin_bottom = 40.0
text = "[IP]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="HTTPRequest" parent="ip_panel/ips"]

[connection signal="pressed" from="buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="buttons/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="car_selector" to="." method="_on_car_selector_pressed"]
[connection signal="pressed" from="Copy_xt_ip" to="ip_panel/ips" method="_on_Copy_xt_ip_pressed"]
[connection signal="pressed" from="Copy_it_ip" to="ip_panel/ips" method="_on_Copy_it_ip_pressed"]
[connection signal="text_changed" from="server_settings_panel/server_settings/NameEdit" to="server_settings_panel/server_settings" method="_on_NameEdit_text_changed"]
[connection signal="item_selected" from="server_settings_panel/server_settings/MapSelection" to="server_settings_panel/server_settings" method="_on_map_selected"]
[connection signal="value_changed" from="server_settings_panel/server_settings/RoundCount" to="server_settings_panel/server_settings" method="_on_round_count_changed"]
[connection signal="toggled" from="server_settings_panel/server_settings/startTimerButton" to="server_settings_panel/server_settings" method="_on_start_timer_toggled"]
[connection signal="request_completed" from="ip_panel/ips/ip" to="ip_panel/ips" method="_on_ip_request_completed"]
